src/assets/styles/partials/_header.scss
header {
  background: $c-black url('../assets/gfx/header-bg.png') repeat-y;
  padding: 13px 15px;

  @media (max-width: $screen-sm-max) {
    text-align: center;
  }
}

.site-header__logo {
  display: inline-block;
  vertical-align: middle;
  max-width: 312px;
  margin: 0 20px 0 6px;
  @include bp(mobil) {
    width: 100%;
    margin: 0;
    text-align: center;
  }
  @media (max-width: 1191px) {
    max-width: 250px;
  }
}

.site-header__slogan {
  display: inline-block;
  vertical-align: bottom;
  max-width: 380px;
  font-size: 18px;
  text-align: left;
  color: #ccc;
  font-weight: 300;
  letter-spacing: 0.025em;
  @include bp(mobil) {
    display: block;
    width: 100%;
    margin: 20px auto 10px;
    text-align: center;
  }

  span {
    color: #ddd;
    font-weight: 500;
  }
}

.site-header__right {
  float: right;
  max-width: 315px;
  margin-top: 27px;
  color: #ccc;
  font-size: 17px;
  font-weight: 300;
  text-align: center;

  img {
    margin-bottom: 3px;
  }

  span {
    display: block;
  }

  @media (max-width: 1191px) {
    max-width: 240px;
  }
  @media (max-width: $screen-sm-max) {
    float: none;
    width: 100%;
    max-width: 100%;
    margin-top: 0;
    margin-bottom: 20px;
    padding-bottom: 5px;
    border-bottom: 1px solid $black-01;

    img {
      max-width: 240px;
    }
  }
}

